micronfig_macros/tests/sources/wrong_conversion_tildearrow.stderr
error: expected `,`
 --> tests/sources/wrong_conversion_tildearrow.rs:2:20
  |
2 |     GARASAUTO: String ~> u64,
  |                       ^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_conversion_tildearrow.rs:6:19
  |
6 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
